--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -3,45 +3,45 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>UNC BACS 200 </title>
+    <title>UNC BACS 200 Demo Server</title>
 </head>
 
 <body>
     <h1>Mustafa Muhumed Home Page</h1>
 
     <p>
-        My Home Page -
-        <a href="https://unco-bacs.org/bacs200/demo/index.html">
-            My Web Pages
-        </a>
-    </p>
-    <p>
         My Github -
-        <a href="https://github.com/Mark-Seaman/UNC-BACS200-Demo">
-            Mustafa Muhumed/UNC-BACS200-Demo
+        <a href="https://github.com/muhu7388/BACS-200/tree/master/bacs200">Mustafa Muhumed BACS200-Demo
         </a>
     </p>
     <p>
         My Canvas -
-        <a href="https://canvas.un>Canvas</a>
+        <a href="https://www.unco.edu/canvas">Canvas</a>
     </p>
 
 
     <h2>My Projects</h2>
     <ul>
         <li>
-            Project #1 - <a href="https://unco-bacs.org">
-                WordPress Blog
+            <a href="01">
+                Week #1
             </a>
+            - Project #2 - Wordpress Blog
         </li>
         <li>
-            Project #2 -
-            <a href="02/index.html">
-                Inspire Me
+
+            <a href="02">
+                Week #2
             </a>
+            - Project #2 - Inspiration
+        </li>
+        <li>
+
+            <a href="03">
+                Week #3
+            </a>
+            - Project #3 - Amusement
         </li>
     </ul>
 
-</body>
-
-</html>
+</body></html>
