--- a/bacs200/02/index.html
+++ b/bacs200/02/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <title>Image Demo</title>
+</head>
+
+<body>
+    
+    <p>
+        project 2
+    </p>
+
+
+</body></html>
