--- a/bacs200/02/index.html
+++ b/bacs200/02/index.html
@@ -1,16 +1,20 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>Image Demo</title>
+    <title>BACS 200 - Week #2</title>
 </head>
 
 <body>
-    
-    <p>
-        project 2
-    </p>
+    <h1>Mustafa Muhumed  - Week #2</h1>
 
+    <h2>My Projects</h2>
+    <ul>
+        <li>
+            <a href="inspire.html">My Inspiration</a>
+        </li>
+    </ul>
 
-</body></html>
+</body>
+
+</html>
