--- a/bacs200/02/inspire.html
+++ b/bacs200/02/inspire.html
@@ -11,14 +11,14 @@
         </p>
         <p>
             Muhammad Ali was one of those prolific figures that embodied what it meant to be great
-            His characteristics were
+            Some of his characteristics that I admire are
         </p>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Motivated</li>
+            <li>Self Disciplined</li>
+            <li>Determined</li>
+            <li>Religious</li>
+            <li>Confident</li>
         </ul>
         <p>
           
