--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -37,7 +37,7 @@
         </li>
         <li>
 
-            <a href="03/Amusement.html">
+            <a href="03">
                 Week #3
             </a>
             - Project #3 - Amusement
