--- a/bacs200/01/index.html
+++ b/bacs200/01/index.html
@@ -1,22 +1,47 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title> BACS 200 Week 1 </title>
+    <title>UNC BACS 200 Demo Server</title>
 </head>
 
 <body>
-    <h1>Mustafa Muhumed - Week #1</h1>
+    <h1>Mustafa Muhumed - Home Page</h1>
+
+    <p>
+        My Github -
+        <a href="https://github.com/muhu7388/BACS-200/tree/master/bacs200">Mustafa Muhumed BACS200-Demo
+        </a>
+    </p>
+    <p>
+        My Canvas -
+        <a href="https://www.unco.edu/canvas">Canvas</a>
+    </p>
+
 
     <h2>My Projects</h2>
     <ul>
         <li>
-            <a  href= "https://mustmu.com"> Wordpress Blog</a>
+            <a href="01">
+                Week #1
+            </a>
+            - Project #2 - Wordpress Blog
+        </li>
+        <li>
+
+            <a href="02">
+                Week #2
+            </a>
+            - Project #2 - Inspiration
+        </li>
+        <li>
+
+            <a href="03">
+                Week #3
+            </a>
+            - Project #3 - Amusement
         </li>
     </ul>
 
-</body>
-
-</html>
-
-.
+</body></html>
